--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -128,6 +128,8 @@ body {
     
   }
   
+
+  
   .header-content img {
     position: absolute;
     top: 0;
@@ -215,10 +217,12 @@ body {
   nav a {
     display: block;
     color: #fff;
+    background-color: #000;
     text-align: center;
     padding: 1rem;
     text-decoration: none;
   }
+  
   
   nav a:hover {
     border: 1px solid #fff;
@@ -226,11 +230,14 @@ body {
   }
   
   
+
+  
   .active{
     border-bottom: 1px solid var(--nav-hover-link-color); 
     padding-bottom: 10px !important;
     transition: .5s;
     border-width: 3px;
+    color: yellow;
     
   }
   
