--- a/styles/base.css
+++ b/styles/base.css
@@ -142,6 +142,7 @@ body {
   nav a {
     display: block;
     color: #fff;
+    background-color: #551A8B;
     text-align: center;
     padding: 1rem;
     text-decoration: none;
@@ -151,8 +152,13 @@ body {
     border: 1px solid #fff;
   }
   
-  .active {
+  .active{
+    border-bottom: 1px solid var(--nav-hover-link-color); 
+    padding-bottom: 10px !important;
+    transition: .5s;
+    border-width: 3px;
     color: yellow;
+    
   }
   
   section h3{
