--- a/styles/larger.css
+++ b/styles/larger.css
@@ -11,8 +11,7 @@
     .card{
         width: 26rem;
         grid-column: 1 / 2;
-        padding: 2rem;
-       }
+        padding: 2rem;       }
           
    .card2{
     grid-column: 2 / 3;
